--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
             
             label:hover{color:aqua}
             (legend fieldset label):hover{color:aquamarine}
+            <script>
+        var name;
+        name=prompt("Hohy hívnak jóember?");
+        document.write("Szia "+name+" !");
+    </script>
         </style>
         
         <body>
